@@ -639,15 +639,15 @@
   <string id="10015">Indstillinger-&gt;Skærm-&gt;Undertekster</string>
   <string id="10016">Indstillinger-&gt;Skærm-&gt;Pauseskærm</string>
   <string id="10017">Indstillinger-&gt;Vejret</string>
-  <string id="10018">Indstillinger-&amp;gt;Netværk</string>
-  <string id="10019">Indstillinger-&amp;gt;Visning</string>
+  <string id="10018">Indstillinger-&gt;Netværk</string>
+  <string id="10019">Indstillinger-&gt;Visning</string>
   <string id="10020">Makroer</string>
   <string id="10021">Film/genre</string>
   <string id="10022">Film/skuespiller</string>
   <string id="10023">Film/årstal</string>
   <string id="10025">Film/titel</string>
   <string id="10028">Film/afspillingsliste</string>
-  <string id="10034">Indstillinger-&amp;gt;Profiler</string>
+  <string id="10034">Indstillinger-&gt;Profiler</string>
   <string id="10100">Ja/nej dialog</string>
   <string id="10101">Progress dialog</string>
   <string id="10500">Musik/afspillingsliste</string>
