@@ -674,24 +674,24 @@
   <string id="10006">Videos</string>
   <string id="10007">Systeminformationen</string>
   <string id="10008">Einstellungen</string>
-  <string id="10009">Einstellungen-&amp;gt;Bildschirm</string>
-  <string id="10010">Einstellungen-&amp;gt;Allgemein-&amp;gt;GUI-Kalibrierung</string>
-  <string id="10011">Einstellungen-&amp;gt;Videos-&amp;gt;Bild-Kalibrierung</string>
-  <string id="10012">Einstellungen-&amp;gt;Bilder</string>
-  <string id="10013">Einstellungen-&amp;gt;Anwendungen</string>
-  <string id="10014">Einstellungen-&amp;gt;Wetter</string>
-  <string id="10015">Einstellungen-&amp;gt;Musik</string>
-  <string id="10016">Einstellungen-&amp;gt;System</string>
-  <string id="10017">Einstellungen-&amp;gt;Videos</string>
-  <string id="10018">Einstellungen-&amp;gt;Netzwerk</string>
-  <string id="10019">Einstellungen-&amp;gt;Allgemein</string>
+  <string id="10009">Einstellungen-&gt;Bildschirm</string>
+  <string id="10010">Einstellungen-&gt;Allgemein-&gt;GUI-Kalibrierung</string>
+  <string id="10011">Einstellungen-&gt;Videos-&gt;Bild-Kalibrierung</string>
+  <string id="10012">Einstellungen-&gt;Bilder</string>
+  <string id="10013">Einstellungen-&gt;Anwendungen</string>
+  <string id="10014">Einstellungen-&gt;Wetter</string>
+  <string id="10015">Einstellungen-&gt;Musik</string>
+  <string id="10016">Einstellungen-&gt;System</string>
+  <string id="10017">Einstellungen-&gt;Videos</string>
+  <string id="10018">Einstellungen-&gt;Netzwerk</string>
+  <string id="10019">Einstellungen-&gt;Allgemein</string>
   <string id="10020">Skripte</string>
   <string id="10021">Videos/Genre</string>
   <string id="10022">Videos/Interpret</string>
   <string id="10023">Videos/Jahr</string>
   <string id="10025">Videos/Titel</string>
   <string id="10028">Videos/Wiedergabeliste</string>
-  <string id="10034">Einstellungen-&amp;gt;Profile</string>
+  <string id="10034">Einstellungen-&gt;Profile</string>
   <string id="10100">Auswahlmenü</string>
   <string id="10101">Statusleiste</string>
   <string id="10500">Musik/Wiedergabeliste</string>
