@@ -633,25 +633,25 @@
   <string id="10005">음악</string>
   <string id="10006">비디오</string>
   <string id="10007">시스템 정보</string>
-  <string id="10008">설정-&amp;gt;일반</string>
-  <string id="10009">설정-&amp;gt;화면</string>
-  <string id="10010">설정-&amp;gt;화면-&amp;gt;GUI 조정</string>
-  <string id="10011">설정-&amp;gt;비디오-&amp;gt;영상화면 조정</string>
-  <string id="10012">설정-&amp;gt;사진</string>
-  <string id="10013">설정-&amp;gt;프로그램</string>
-  <string id="10014">설정-&amp;gt;날씨</string>
-  <string id="10015">설정-&amp;gt;음악</string>
-  <string id="10016">설정-&amp;gt;시스템</string>
-  <string id="10017">설정-&amp;gt;비디오</string>
-  <string id="10018">설정-&amp;gt;네트워크</string>
-  <string id="10019">설정-&amp;gt;화면</string>
+  <string id="10008">설정-&gt;일반</string>
+  <string id="10009">설정-&gt;화면</string>
+  <string id="10010">설정-&gt;화면-&gt;GUI 조정</string>
+  <string id="10011">설정-&gt;비디오-&gt;영상화면 조정</string>
+  <string id="10012">설정-&gt;사진</string>
+  <string id="10013">설정-&gt;프로그램</string>
+  <string id="10014">설정-&gt;날씨</string>
+  <string id="10015">설정-&gt;음악</string>
+  <string id="10016">설정-&gt;시스템</string>
+  <string id="10017">설정-&gt;비디오</string>
+  <string id="10018">설정-&gt;네트워크</string>
+  <string id="10019">설정-&gt;화면</string>
   <string id="10020">스크립트</string>
   <string id="10021">비디오/장르</string>
   <string id="10022">비디오/배우</string>
   <string id="10023">비디오/제작년도</string>
   <string id="10025">비디오/제목</string>
   <string id="10028">비디오/재생목록</string>
-  <string id="10034">설정-&amp;gt;프로파일</string>
+  <string id="10034">설정-&gt;프로파일</string>
   <string id="10100">예/아니오 대화창</string>
   <string id="10101">진행 대화창</string>
   <string id="10500">음악/재생목록</string>
