@@ -673,25 +673,25 @@
   <string id="10005">Min musikk</string>
   <string id="10006">Mine filmer</string>
   <string id="10007">Systeminformasjon</string>
-  <string id="10008">Innstillinger-&amp;gt;Generelt</string>
-  <string id="10009">Innstillinger-&amp;gt;Skjerm</string>
-  <string id="10010">Innstillinger-&amp;gt;Utseende-&amp;gt;Grensesnittskalibrering</string>
-  <string id="10011">Innstillinger-&amp;gt;Mine filmer-&amp;gt;Bildekalibrering</string>
-  <string id="10012">Innstillinger-&amp;gt;Mine bilder</string>
-  <string id="10013">Innstillinger-&amp;gt;Mine programmer</string>
-  <string id="10014">Innstillinger-&amp;gt;Været</string>
-  <string id="10015">Innstillinger-&amp;gt;Min musikk</string>
-  <string id="10016">Innstillinger-&amp;gt;System</string>
-  <string id="10017">Innstillinger-&amp;gt;Mine filmer</string>
-  <string id="10018">Settings-&amp;gt;Nettverk</string>
-  <string id="10019">Settings-&amp;gt;Utseende</string>
+  <string id="10008">Innstillinger-&gt;Generelt</string>
+  <string id="10009">Innstillinger-&gt;Skjerm</string>
+  <string id="10010">Innstillinger-&gt;Utseende-&gt;Grensesnittskalibrering</string>
+  <string id="10011">Innstillinger-&gt;Mine filmer-&gt;Bildekalibrering</string>
+  <string id="10012">Innstillinger-&gt;Mine bilder</string>
+  <string id="10013">Innstillinger-&gt;Mine programmer</string>
+  <string id="10014">Innstillinger-&gt;Været</string>
+  <string id="10015">Innstillinger-&gt;Min musikk</string>
+  <string id="10016">Innstillinger-&gt;System</string>
+  <string id="10017">Innstillinger-&gt;Mine filmer</string>
+  <string id="10018">Settings-&gt;Nettverk</string>
+  <string id="10019">Settings-&gt;Utseende</string>
   <string id="10020">Skript</string>
   <string id="10021">Mine filmer/sjanger</string>
   <string id="10022">Mine filmer/skuespiller</string>
   <string id="10023">Mine filmer/år</string>
   <string id="10025">Mine filmer/tittel</string>
   <string id="10028">Mine filmer/spilleliste</string>
-  <string id="10034">Innstillinger-&amp;gt;Profiler</string>
+  <string id="10034">Innstillinger-&gt;Profiler</string>
   <string id="10100">Ja/nei-dialog</string>
   <string id="10101">Progresjonsdialog</string>
   <string id="10500">Min musikk/spilleliste</string>
